# controllers/books.js
@@ -40,7 +40,7 @@ const createBook = async (req, res) => {
     }
 };
 
-/*
+
 const updateBook = async (req, res) => {
     //#swagger.tags=['Books']
     const bookId = new ObjectId(req.params.id);
@@ -49,11 +49,12 @@ const updateBook = async (req, res) => {
         author: req.body.author,
         isbn: req.body.isbn,
         genre: req.body.genre,
-        publishedYear: req.body.publishedYear,
-        available: req.body.available
+        pages: Number(req.body.pages),
+        publishedYear: Number(req.body.publishedYear),
+        available: Boolean(req.body.available)
     };
 
-    const response = await mongodb.getDatabase().db().collection('books').replaceOne({ _id: bookId }, user);
+    const response = await mongodb.getDatabase().db().collection('books').replaceOne({ _id: bookId }, book);
     if (response.modifiedCount > 0) {
         res.status(204).send();
     } else {
@@ -71,12 +72,12 @@ const deleteBook = async (req, res) => {
         res.status(500).json(response.error || 'Some error occurred while deleting the book')
     }
 };
-*/
+
 
 module.exports = {
     getAll,
     getSingle,
-    createBook
-    //updateBook,
-    //deleteBook
+    createBook,
+    updateBook,
+    deleteBook
 };
